--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1><span class="orange-color">Roqunuzzzaman's</span> World</h1>
-            <h3>about my self introduction</h3>
+            <h3>Self Introduction</h3>
             <p>Hi,I'm Roqunuzzzaman.Now i'm studing at gannan normal university in china.<br>
                 My mejor is computer science and technology.It is my dream subject.<br>
                 i'm from Bangladesh,that's really wonderful country.I have a family of four members.<br>
@@ -25,9 +25,24 @@
         <div class="half-width">
             <img src="xinfeng.jpg">
         </div>
-
-
     </section>
+    <section>
+        <div class="video">
+            <video width="320" height="240" controls>
+                <source src="ningvideo.mp4" type="video/mp4">
+
+        </div>
+        <div class="video">
+            <h2 class="button2"> Future Plan</h2>
+            <p>As a computer science student ,i want to learn about all sector<br>
+                of computer science such that,web development,hacking,networking<br>
+                software development,data science,robotics etc.After my graduation<br>
+                i want job offer from tech jiant company.I will build myself like this</p>
+        </div>
+    </section>
+
+
+
 </body>
 
 </html>
